--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
           git config --local user.email "love2xinwei@gmail.com"
           git config --local user.name "GitHub Robot"
           git add -A
-          git commit -m "Updated README content" || exit 0
+          git commit -m "Robot: Updated README content" || exit 0
           git push
 
