--- a/company/idp-shanshu-2022-03-29/package.json
+++ b/company/idp-shanshu-2022-03-29/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "build": "slidev build",
-    "dev": "slidev --open",
+    "dev": "slidev --open --port=5555",
     "export": "slidev export"
   },
   "dependencies": {
