--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code into the Go module directory
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Execute script
         run: bash script/auto.sh
       - name: Commit and push if changed
@@ -14,6 +14,6 @@ jobs:
           git config --local user.email "love2xinwei@gmail.com"
           git config --local user.name "GitHub Robot"
           git add -A
-          git commit -m "Robot: Updated README content" || exit 0
+          git commit -m "Robot: Update README.md file for generating content list" || exit 0
           git push
 
