--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on: [push]
 
 jobs:
   build-and-deploy:
+    concurrency: ci-${{ github.ref }}
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.event.head_commit.message, 'deploy') }}
     steps:
@@ -44,10 +45,10 @@ jobs:
         run: |
           npm install marked --no-save
           npx marked --no-mangle --no-header-ids -i README.md -o index.html
-          sed -e '1i\<main>' -e '$a\</main>' index.html
-          sed '1i\<style>body { display: flex; align-items: center; justify-content: center; } table { border-collapse: collapse; } td, th { border: 1px solid #d0d7de; padding: 0.5em 1em; } tr:nth-child(odd) { background-color: #f6f8fa; }</style>' index.html
-          sed '1i\<meta name="viewport" content="width=device-width, initial-scale=1.0">' index.html
-          sed '5i\<hr />' index.html
+          sed -i -e '1i\<main>' -e '$a\</main>' index.html
+          sed -i '1i\<style>body { display: flex; align-items: center; justify-content: center; } table { border-collapse: collapse; } td, th { border: 1px solid #d0d7de; padding: 0.5em 1em; } tr:nth-child(odd) { background-color: #f6f8fa; }</style>' index.html
+          sed -i '1i\<meta name="viewport" content="width=device-width, initial-scale=1.0">' index.html
+          sed -i '5i\<hr />' index.html
           rm -rf temp
           mkdir -m 755 temp
           mv index.html temp
