--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "type": "module",
   "scripts": {
     "dev": "bash script/auto.sh",
-    "build": "slidev build",
-    "slidev:dev": "slidev ./packages/company/shanshu-2022-12-19/slides.md --open --port=5555",
-    "export": "slidev export"
+    "slidev:build": "slidev build",
+    "slidev:dev": "slidev [entry] --open --port=5555",
+    "slidev:export": "slidev export"
   },
   "dependencies": {
     "@slidev/cli": "^0.41.0",
