--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "scripts": {
     "dev": "bash script/auto.sh",
     "slidev:build": "slidev build",
-    "slidev:dev": "slidev [entry] --open --port=5555",
+    "slidev:dev": "slidev packages/company/shanshu-2023-11-14/slides.md --open --port=5555",
     "slidev:export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "^0.41.0",
+    "@slidev/cli": "^0.46.1",
     "@slidev/theme-default": "*",
     "@slidev/theme-seriph": "*"
   }
